--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,79 @@
+/* 
+body{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+*/
+
 h1 {
+  margin: 0;
   position: absolute;
-  top: 50%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
+  /* translate(-50%, -50%) */
+}
+
+.first {
+  /* background-color: dodgerblue !important; */
+}
+span {
+  display: inline-block;
+  transition: all 0.5s;
+}
+
+span.is-active {
+  transform: translateY(-300px);
+}
+
+.ground {
+  width: 600px;
+  height: 400px;
+  background: greenyellow;
+  border: 10px solid black;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.ball {
+  transition: all 0.3s;
+  /* 공을 누르면 처음 자리로 돌아가는 것 방지. 공을 클릭했을 때 위치를 못 찾아서 처음으로 돌아가는 것. 우리는 그라운드에만 위치를 줬기 때문 */
+  /* 마우스 인식되는 것 방지 */
+  pointer-events: none;
+}
+
+.emotion {
+  font-size: 50px;
+  position: absolute;
+  pointer-events: none;
+}
+
+.visual {
+  padding: 1.5rem;
+  background-color: dodgerblue;
+}
+
+.news {
+  padding: 1rem;
+  background-color: orange;
+}
+
+.desc {
+  padding: 1rem;
+  background-color: hotpink;
+}
+
+.pop {
+  width: 30vw;
+  height: 30vw;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
 }
